--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,3 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix-web = "4.11.0"
+actix-cors = "0.7.1"
+reqwest = {version = "0.12.23", features = ["json"]}
+serde = {version = "1.0.219", features = ["derive"]}
+dotenv = "0.15.0"
+
+
+[dependencies.sqlx]
+version = "0.8.6"
+features = [
+    "runtime-tokio-rustls", "postgres", "uuid", "migrate", "time", "uuid"
+]
