--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 DATABASE_URL=postgresql://docker:docker@localhost:5432/tasks
 PORT=3000
+DEFAULT_AVATAR="default.jpg"
+SIGNED_URL_API="http://localhost:3333"
