--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,7 @@ reqwest = {version = "0.12.23", features = ["json"]}
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1"
 dotenv = "0.15.0"
+argon2 = "0.5.3"
 
 
 
