--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,6 +11,7 @@ serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1"
 dotenv = "0.15.0"
 argon2 = "0.5.3"
+mockito = "1.7.0"
 
 
 
