--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ DATABASE_URL=postgresql://docker:docker@localhost:5432/tasks
 PORT=3000
 DEFAULT_AVATAR="default.jpg"
 SIGNED_URL_API="http://localhost:3333"
+JWT_SECRET="123213120932194238u38vn3-fp49343v3t3t"
