--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,7 +13,8 @@ dotenv = "0.15.0"
 argon2 = "0.5.3"
 mockito = "1.7.0"
 jsonwebtoken = "9.3.1"
-chrono = "0.4.41"
+chrono = {version = "0.4.41", features = ["serde"]}
+
 
 
 
